fixes z-index for dev tools

--- a/src/scss/apex_components/_themeroller.scss
+++ b/src/scss/apex_components/_themeroller.scss
@@ -1,5 +1,6 @@
-// toolbar modals
-.utr {
+body .utr {
+	z-index: $zindex-modal!important;
+
 	// region display selector
 	.apex-rds {
 		padding-top: 0;
